Corrección de Invariante de la clase inmortalManager para N > 1000